fixed button IE bug on regions page

--- a/static/styles/components/_hotfixes.scss
+++ b/static/styles/components/_hotfixes.scss
@@ -24,3 +24,11 @@
 .mobile-title a:hover{
 	color: #696969 !important;
 }
+
+.northbay.button{
+	width: 129px;
+
+	@include media(max-width 760px){
+		width:72px;
+	}
+}
